# Algebra

./: CMakeLists.txt  log.txt  main.cpp
headers/architecture/: interpreter.hpp
headers/database/: variables.hpp
headers/libraries/: parsing.hpp
sources/architecture/: interpreter.cpp
sources/database/: variables.cpp
sources/libraries/: parsing.cpp
